CHANGES IN VERSION 0.3-3  - Released 2012/05/16

BUG FIXES

* Fix for Issue #2007: Qt option given to Qhull
  (https://r-forge.r-project.org/tracker/index.php?func=detail&aid=2007&group_id=1149&atid=4552)

CHANGES IN VERSION 0.3-2  - Released 2012/05/12

BUG FIXES

* Fix for Issue #1968: convhulln crash with T0 option
  (https://r-forge.r-project.org/tracker/index.php?func=detail&aid=1968&group_id=1149&atid=4552)
  Thanks to Thomas Kirschstein, Oskar Knapik and Uwe Ligges for
  reporting this and to Duncan Murdoch for help on the r-devel mailing
  list.

* Fix for Issue #1983: NA in an input to delaunayn crashes R
  (https://r-forge.r-project.org/tracker/index.php?func=detail&aid=1983&group_id=1149&atid=4552)
  Thanks to Bill Denny for reporting this and suggestiong a way
  forward with a fix.

CHANGES IN VERSION 0.3-1  - Released 2012/05/01

BUG FIXES

* Fix for Issue #1964: R crashes when using convhulln/delaunayn
  (https://r-forge.r-project.org/tracker/index.php?func=detail&aid=1964&group_id=1149&atid=4552).
  Thanks to Thomas Kirschstein, Oskar Knapik and Paolo Piras for
  reporting this.

CHANGES IN VERSION 0.3-0  - Released 2012/04/17

NEW FEATURES

 * New function dot() to compute dot product. Syntax is shared with
   Octave dot() function.  

 * New function polyarea() to compute area of polygons. Syntax is shared with
   Octave polyarea() function.  

BUG FIXES

 * Fix for Issue #1578: convhulln crashes when running 2 instances of
   R in the same directory: output to qhull_out.txt removed
   (https://r-forge.r-project.org/tracker/index.php?func=detail&aid=1578&group_id=1149&atid=4552).
   Thanks to Francois Rousset and Bernd Bischl for reporting this.

 * Fix for Issue #1923: Compilation on Windows 64 doesn't work (https://r-forge.r-project.org/tracker/index.php?func=detail&aid=1923&group_id=1149&atid=4552)
