@@ -1,11 +1,14 @@
 
-R version 2.11.1 (2010-05-31)
-Copyright (C) 2010 The R Foundation for Statistical Computing
+R version 2.14.0 (2011-10-31)
+Copyright (C) 2011 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
+Platform: x86_64-redhat-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
 Type 'license()' or 'licence()' for distribution details.
+
+  Natural language support but running in an English locale
 
 R is a collaborative project with many contributors.
 Type 'contributors()' for more information and
@@ -16,6 +19,8 @@ Type 'demo()' for some demos, 'help()' for on-line help, or
 Type 'q()' to quit R.
 
 > library(geometry)
+Loading required package: magic
+Loading required package: abind
 > x <- c(-1, -1, 1)
 > y <- c(-1, 1, -1)
 > tri <- matrix(c(1, 2, 3), 1, 3)
@@ -35,4 +40,14 @@ Type 'q()' to quit R.
 > tsearch(x, y, tri, 1, 1)
 [1] NA
 > 
+> ## Create degenerate simplex
+> ps <- as.matrix(rbind(data.frame(a=0, b=0, d=0),
++                       merge(merge(data.frame(a=c(-1, 1)),
++                                   data.frame(b=c(-1, 1))),
++                             data.frame(d=c(-1, 1)))))
+> ## The Qt option leads to the degnerate simplex
+> ts <- delaunayn(ps, "Qt")
+> ## tsearchn should return a "degnerate simplex" error.
+> try(tsearchn(ps[ts[1,],], ts, cbind(1, 2, 4)))
+Error in ncol(X) : subscript out of bounds
 > 
