@@ -2,6 +2,11 @@ CHANGES IN VERSION 0.3-3  - Released 2012/05/16
 
 BUG FIXES
 
+* Fix for Issue #1993: Error in solve.default in tsearchn
+  (https://r-forge.r-project.org/tracker/index.php?func=detail&aid=1993&group_id=1149&atid=4552)
+  Thanks to Bill Denny for reporting this and suggestiong a way
+  forward with a fix.
+
 * Fix for Issue #2007: Qt option given to Qhull
   (https://r-forge.r-project.org/tracker/index.php?func=detail&aid=2007&group_id=1149&atid=4552)
 
